Fix: contacts no longer go off screen
There was no word-wrap for e-mail and it was breaking the layout. Fixed now with word-wrap and padding.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -727,6 +727,7 @@ a.footer-section-item {
   flex-direction: column;
   align-items: center;
   padding-bottom: 50px;
+  width: 100%;
 }
 
 .contacts__title {
@@ -734,6 +735,7 @@ a.footer-section-item {
   font-size: 28px;
   font-weight: bold;
   font-style: italic;
+  text-align: center;
   margin-top: 50px;
   margin-bottom: 24px;
 }
@@ -744,7 +746,12 @@ a.footer-section-item {
   font-weight: normal;
   font-style: normal;
   text-align: center;
-  margin: 12px;
+  word-wrap: break-word;
+
+  box-sizing: border-box;
+  width: 100%;
+  margin: 12px 0px;
+  padding: 0px 30px;
 }
 
 .contacts__line {
@@ -954,8 +961,43 @@ input {
     font-size: 22px;
   }
 
+
+  .contacts__title {
+    font-size: 24px;
+  }
+
+  .contacts__item {
+    font-size: 20px;
+  }
+
 }
 
+@media screen and (max-width: 360px) {
+  #mobile-header__title {
+    font-size: 18px;
+  }
+
+  #mobile-header__menu-button {
+    font-size: 16px;
+  }
+
+  .contacts__title {
+    font-size: 22px;
+  }
+
+  .contacts__item {
+    font-size: 16px;
+  }
+
+  a.footer-section-item {
+    font-size: 10px;
+  }
+
+  p.footer-section-item {
+    font-size: 10px;
+  }
+  
+}
 
 
 /* Study specific */
